apps/hello-service-a/envs/prod-us/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service-a
spec:
  template:
    spec:
      containers:
      - name: hello-service-a
