apps/hello-service-a/envs/prod-us/replicas.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-service-a
spec:
  replicas: 4
